--- a/docker-compose-https.yml
+++ b/docker-compose-https.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   weblate:
-    image: weblate/weblate
+    image: pinkuburu/webtest
     volumes:
       - weblate-data:/app/data
     env_file:
