--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,15 @@ services:
     env_file:
       - ./environment
     restart: always
+    ports:
+      - 8082:8080
     depends_on:
       - database
       - cache
   database:
     image: postgres:13-alpine
+    ports:
+      - 3389:5432
     env_file:
       - ./environment
     volumes:
